--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -21,5 +21,12 @@ sky:
   wechat:
     appid: wx5c7f5acfbc744ca9
     secret: 51b408bad1fa92d0a8afd2c1fe33d671
+    mchid: 1561414331
+    mchSerialNo: 4B3B3DC35414AD50B1B755BAF8DE9CC7CF407606
+    privateKeyFilePath: C:\software\apiclient_key.pem
+    apiV3Key: CZBK51236435wxpay435434323FFDuv3
+    weChatPayCertFilePat: C:\software\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
+    notifyUrl: https://7eda8a2.r19.cpolar.top/notify/paySuccess
+    refundNotifyUrl: https://7eda8a2.r19.cpolar.top/notify/refundSuccess
 
 
